specify 100vw width to avoid scroll bar causing jumps

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100vw;
   font-family: sans-serif;
   background-image:
       linear-gradient(rgba(188,201,211,0.5),rgba(230,235,239,0.6)),
